--- a/nginx.conf
+++ b/nginx.conf
@@ -8,6 +8,7 @@ events {
 }
 
 http {
+  include /etc/nginx/mime.types;
   access_log /dev/stdout;
   server_tokens off; # Hide nginx version in Server header & page footers
 
